# cube-solver

./: .gitignore  BottomCrossSolver.cpp  BottomCrossSolver.hpp  BottomSolver.cpp  BottomSolver.hpp  CMakeLists.txt  CNAME  Constants.hpp  CornerSolver.cpp  CornerSolver.hpp  CrossSolver.cpp  CrossSolver.hpp  Cube.cpp  Cube.hpp  Dockerfile  EdgesSolver.cpp  EdgesSolver.hpp  Helpers.cpp  Helpers.hpp  PairHash.hpp  README.md  Solver.hpp  example_cube.txt  main.cpp  test  test.cpp  vcpkg.json
.github/workflows/: ci.yml  deploy.yml  destroy.yml  solver.yml
src/: BottomSolver.cpp  Constants.hpp  CornerSolver.cpp  CornerSolver.hpp  CrossSolver.cpp  CrossSolver.hpp  Cube.cpp  Cube.hpp  CubeSolverLib.cpp  CubeSolverLib.hpp  EdgesSolver.cpp  EdgesSolver.hpp  Face.hpp  Helpers.cpp  Helpers.hpp  main.cpp  server.cpp
terraform/: acm.tf  alb.tf  backend.tf  ecr.tf  ecs.tf  iam.tf  outputs.tf  route53.tf  variables.tf  vpc.tf
tests/: test_optimise.cpp  test_solve.cpp
